# Portfolio-Assistant

./: README.md  pyproject.toml
backend/: create_ticker_list.py
