[tool.poetry]
name = "portfolio assistant"
version = "0.1.0"
description = ""
authors = ["Sanghyeok Park <ray5273@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit-pydantic = "^0.6.0"
streamlit-searchbox = "^0.1.3"
uvicorn = "^0.23.2"
fastapi = "^0.103.2"
sqlalchemy = "^2.0.22"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.9"
passlib = "^1.7.4"
st-pages = "^0.4.5"
streamlit-extras = "^0.3.4"
bcrypt = "^4.0.1"
finance-datareader = "^0.9.50"
pydantic = "1.10.8"
streamlit-aggrid = "^0.3.4.post3"
plotly = "^5.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
